--- a/Demo/Pages/Index.razor
+++ b/Demo/Pages/Index.razor
@@ -8,7 +8,7 @@
         <div class="col">
             <div class="form-group" dir="rtl">
                 <label>Date</label>
-               <InputDateIosBlazor.InputDateIos @bind-Value="student.BeginDate"/>
+                <DatePicker.Picker @bind-Value="student.BeginDate"/>
             </div>
         </div>
         <div class="col">
